# sonic-sai-common-utils

./: Makefile.am  README.md  configure.ac  package.cfg
debian/: changelog  control
inc/: sai_acl_utils.h  sai_common_utils.h  sai_event_log.h  sai_fdb_api.h  sai_fdb_common.h  sai_gen_utils.h  sai_hash_object.h  sai_hostif_common.h  sai_l3_api.h  sai_l3_common.h  sai_l3_util.h  sai_lag_common.h  sai_mirror_util.h  sai_npu_api_plugin.h  sai_npu_hostif.h  sai_npu_lag.h  sai_npu_port.h  sai_npu_qos.h  sai_npu_stp.h  sai_npu_vlan.h  sai_oid_utils.h  sai_port_common.h  sai_port_utils.h  sai_qos_buffer_util.h  sai_qos_common.h  sai_qos_util.h  sai_samplepacket_util.h  sai_stp_util.h  sai_switch_common.h  sai_switch_init_config.h  sai_switch_utils.h  sai_udf_common.h  sai_vlan_common.h
src/: sai_gen_utils.c
src/acl/: sai_acl_utils.c
src/port/: sai_port_attributes.c  sai_port_debug.c  sai_port_utils.c
src/qos/: sai_qos_buffer_util.c  sai_qos_debug.c  sai_qos_util.c
src/routing/: sai_l3_debug.c  sai_l3_util.c
src/switching/: sai_fdb_utils.c  sai_vlan_utils.c
